[tool.poetry]
name = "measurement"
version = "0.1.0"
description = ""
authors = ["Tatsuya Sakurai <tatsuya.sakurai@exmotion.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.1"
langchain = "^0.0.311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
