[tool.poetry]
name = "tutorial-from-langchain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tutorial_from_langchain"}]

[tool.poetry.dependencies]
python = "3.10.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
